# gradschoolworks

./: .gitignore  KNN_classifier.m  MLPweight.npz  README.md
ADAS_v1/ProjectSettings/: ProjectSettings.asset
AdvancedDatabase/: .env.example  .gitignore  README.md  docker-compose.r2.yml  docker-compose.r3.yml  docker-compose.yml  experiment_plan.md  experiment_report.md  pyproject.toml  requirements-model.txt  requirements.txt  term_project_final_report.md  term_project_mid_report.md
AdvancedDatabase/infra/postgres_meta/: init.sql
AdvancedDatabase/infra/postgres_pgvector/: init.sql
AdvancedDatabase/src/ragdb_experiment/: __init__.py  agnews_gen.py  batch_experiment.py  benchmark.py  config.py  data_gen.py  db.py  embeddings.py  io.py  main.py  search.py  sync_experiment.py  test_queries_gen.py
ComputerSystem/TermProject/: Hello.cpp  TermProject.sln  텀프로젝트_최종보고서_이해동.odt
ComputerVision/: ComputerVision.sln
ComputerVision/FeatureMatching/: FeatureMatching.cpp  FeatureMatching.vcxproj  FeatureMatching.vcxproj.filters
ComputerVision/HarrisCornerDetector/: HarrisCornerDetector.cpp  HarrisCornerDetector.vcxproj  HarrisCornerDetector.vcxproj.filters
ComputerVision/HoughLineDetect/: HoughLineDetect.cpp  HoughLineDetect.vcxproj  HoughLineDetect.vcxproj.filters
ComputerVision/TermProject/: TermProject.cpp  TermProject.vcxproj
ComputerVision/TermProjectPy/: TermProjectPy.py  TermProjectPy.pyproj  lane_utils.py
Cryptography_Security/: .gitignore  CMakeLists.txt  README.md  arx_streams.py  final_report.md  run_arx_experiments.py  security_term_project_final_report.md  security_term_project_mid_report.md  test_plan.md  test_result.md
Cryptography_Security/src/: ChaCha20.cpp  ChaCha20.h  Salsa20.cpp  Salsa20.h  TestMain.cpp
MachineLearning/HW1/: HW_report.odt  data8_9  hw12.7z  (+7 more)
SoftwareEngineering/: term_project_final_report.md  term_project_mid_report.md  test_plan.md  test_report.md
(+445 files in other folders)
