[project]
name = "ragdb-experiment"
version = "0.1.0"
description = "PostgreSQL + Qdrant vs PostgreSQL + pgvector experiment scaffold"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "psycopg[binary]>=3.2",
    "qdrant-client>=1.12,<1.14",
    "tqdm>=4.66",
]

[project.optional-dependencies]
model = [
    "sentence-transformers>=3.0",
]

[project.scripts]
ragdb-exp = "ragdb_experiment.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
